# mongoDB

C++/Client/: CMakeCache.txt  CMakeLists.txt  Client.cbp  client_gui  cmake_install.cmake  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp_parameters  moc_mongodbconnection.cpp_parameters  moc_mqttconnection.cpp_parameters  mongodbconnection.cpp  mongodbconnection.h
MongoDBGui/: README.md
MongoDBGui/Example/: main.py
MongoDBGui/matplotlibExample/: main.py
